# package-versioner

./: .gitattributes  .gitignore  README.md  biome.json  biome.jsonc  package-versioner.schema.json  package.json  pnpm-lock.yaml  tsconfig.json  version.config.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: _release-calculate.reusable.yml  _release-orchestration.reusable.yml  _release-post.reusable.yml  _release-prepare.reusable.yml  _release-publish.reusable.yml  ci.yml  direct-release.yml  pre-release.yml  release.yml
docs/: CI_CD_INTEGRATION.md  VERSIONING_STRATEGIES.md  changelogs.md  versioning.md
scripts/: cleanup-fixtures.ts
src/: config.ts  git.ts  index.ts  types.ts  utils.ts  versionEngine.ts
src/cargo/: cargoHandler.ts
src/changelog/: changelogManager.ts  changelogRegenerator.ts  commitParser.ts  formatters.ts
src/core/: versionCalculator.ts  versionEngine.ts  versionStrategies.ts
src/errors/: baseError.ts  gitError.ts  versionError.ts
src/git/: commandExecutor.ts  commands.ts  tagsAndBranches.ts
src/package/: packageManagement.ts  packageProcessor.ts
src/utils/: formatting.ts  jsonOutput.ts  logging.ts  manifestHelpers.ts  packageFiltering.ts  packageMatching.ts  versionUtils.ts
test/: config.spec.ts  git.spec.ts  utils.spec.ts  versionEngine.spec.ts
test/core/: versionCalculator.spec.ts  versionEngine.spec.ts  versionStrategies.spec.ts
test/fixtures/hybrid-package/: CHANGELOG.md  Cargo.toml  package.json  version.config.json
test/fixtures/hybrid-package/src/: lib.rs
types/: git-semver-tags.d.ts
(+66 files in other folders)
