[package]
name = "hybrid-package-test"
version = "0.1.0"
description = "A test hybrid package with complex Cargo.toml structure"
authors = [ "Test Author <test@example.com>" ]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
exclude = [ "/examples" ]
include = [ "Cargo.toml", "src/**/*", "build.rs", "README.md" ]
links = "hybrid-package-test"
repository = "https://github.com/example/hybrid-package-test"
homepage = "https://github.com/example/hybrid-package-test"
documentation = "https://github.com/example/hybrid-package-test"
readme = "README.md"
keywords = [ "test", "hybrid", "package" ]
categories = [ "test" ]

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[build-dependencies]
[build-dependencies.cargo-build]
version = "1.0.0"

[features]
default = []
custom-feature = []